--- a/orbit-app/package.json
+++ b/orbit-app/package.json
@@ -17,9 +17,10 @@
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
+    "react-query": "^2.5.14",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "yup": "^0.28.5"
   },
   "scripts": {
